# backend_hire-me

./: .env  .gitignore  README.md  hire_me.db  main.py  pyproject.toml  requirements.txt
core/: config.py
db/: database.py
models/: __init__.py  company.py  job.py  job_application.py  saved_job.py  user.py
routers/: auth.py  company.py  contact.py  job.py  job_application.py  saved_job.py
schemas/: company.py  job.py  job_application.py  saved_job.py  token.py  user.py
seed/: companies.json  jobs.json  seed_companies.py  seed_data.py  seed_jobs.py
templates/: verification_email.html
utils/: email_utils.py  file_storage.py  password_utils.py  token_utils.py
