[project]
name = "backend-hire-me"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.109.2",
    "passlib[bcrypt]==1.7.4",
    "pydantic[email]==2.6.1",
    "pydantic-settings>=2.2.1",
    "python-dotenv==1.0.1",
    "python-jose[cryptography]==3.3.0",
    "python-multipart==0.0.9",
    "sqlalchemy==2.0.27",
    "uvicorn==0.27.1",
    "jinja2>=3.1.6",
    "bcrypt>=4.3.0",
]
